force-app/main/default/objects/ParticipanteRoleta__c/ParticipanteRoleta__c.object-meta.xml
<CustomObject>
    <description>Registra quais usuários participaram da distribuição de leads por roleta.</description>
    <label>Participante da roleta</label>
    <nameField>
        <label>Nome de participante da roleta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participantes da roleta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>