force-app/main/default/objects/ParticipanteRoleta__c/fields/CargaRestante__c.field-meta.xml
<CustomField>
    <fullName>CargaRestante__c</fullName>
    <formula>MembroEquipe__r.Equipe__r.CargaMaxima__c - OcupacaoAtual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carga restante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>