force-app/main/default/objects/ParticipanteRoleta__c/fields/Diretor_geral__c.field-meta.xml
<CustomField>
    <fullName>Diretor_geral__c</fullName>
    <formula>MembroEquipe__r.Usuario__r.Reportase__r.Reportase__r.Reportase__r.FirstName &amp; &quot; &quot; &amp; MembroEquipe__r.Usuario__r.Reportase__r.Reportase__r.Reportase__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diretor geral</label>
    <type>Text</type>
</CustomField>