force-app/main/default/objects/ParticipanteRoleta__c/fields/Entrada__c.field-meta.xml
<CustomField>
    <fullName>Entrada__c</fullName>
    <description>Indica o momento de entrada do participante da roleta.</description>
    <label>Entrada</label>
    <type>DateTime</type>
</CustomField>