force-app/main/default/objects/ParticipanteRoleta__c/fields/Excluir_Participante__c.field-meta.xml
<CustomField>
    <fullName>Excluir_Participante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluir Participante</label>
    <type>Checkbox</type>
</CustomField>