force-app/main/default/objects/ParticipanteRoleta__c/fields/Gerente_Salao__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Salao__c</fullName>
    <formula>MembroEquipe__r.Usuario__r.Reportase__r.FirstName &amp; &quot; &quot; &amp; MembroEquipe__r.Usuario__r.Reportase__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente Salão</label>
    <type>Text</type>
</CustomField>