force-app/main/default/objects/ParticipanteRoleta__c/fields/MembroEquipe__c.field-meta.xml
<CustomField>
    <fullName>MembroEquipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica qual membro da equipe participou da roleta.</description>
    <label>Membro da equipe</label>
    <referenceTo>MembroEquipe__c</referenceTo>
    <relationshipName>ParticipantesRoleta</relationshipName>
    <type>Lookup</type>
</CustomField>