force-app/main/default/objects/ParticipanteRoleta__c/fields/OcupacaoAtual__c.field-meta.xml
<CustomField>
    <fullName>OcupacaoAtual__c</fullName>
    <description>Ocupação atual do participante dados os leads em atendimento por canal.</description>
    <formula>IF($CustomMetadata.ConfiguracaoCanalAtendimento__mdt.FaleConosco.Bypass__c, 0.0, $CustomMetadata.ConfiguracaoCanalAtendimento__mdt.FaleConosco.Carga__c * QuantidadeLeadsFaleConosco__c) +
IF($CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Chat.Bypass__c, 0.0, $CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Chat.Carga__c * QuantidadeLeadsChat__c) +
IF($CustomMetadata.ConfiguracaoCanalAtendimento__mdt.WhatsApp.Bypass__c, 0.0, $CustomMetadata.ConfiguracaoCanalAtendimento__mdt.WhatsApp.Carga__c * QuantidadeLeadsWhatsApp__c) +
IF($CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Telefone.Bypass__c, 0.0, $CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Telefone.Carga__c * QuantidadeLeadsTelefone__c) +
IF($CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Loja.Bypass__c, 0.0, $CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Loja.Carga__c * QuantidadeLeadsLoja__c) +
IF($CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Stand.Bypass__c, 0.0, $CustomMetadata.ConfiguracaoCanalAtendimento__mdt.Stand.Carga__c * QuantidadeLeadsStand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ocupação atual do participante dados os leads em atendimento por canal.</inlineHelpText>
    <label>Ocupação atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>