force-app/main/default/objects/ParticipanteRoleta__c/fields/Participante_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Participante_Vigente__c</fullName>
    <formula>IF( CreatedById == $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participante Vigente</label>
    <type>Checkbox</type>
</CustomField>