force-app/main/default/objects/ParticipanteRoleta__c/fields/PausarDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>PausarDistribuicao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a distribuição de leads está pausada para este participante ou não.</description>
    <inlineHelpText>Indique se a distribuição de leads está pausada para este participante ou não.</inlineHelpText>
    <label>Pausar distribuição</label>
    <type>Checkbox</type>
</CustomField>