force-app/main/default/objects/ParticipanteRoleta__c/fields/PresencaValidada__c.field-meta.xml
<CustomField>
    <fullName>PresencaValidada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a presença do corretor foi validada pelo coordenador para recepção de leads.</description>
    <inlineHelpText>Indica se a presença do corretor foi validada pelo coordenador para recepção de leads.</inlineHelpText>
    <label>Presença validada</label>
    <type>Checkbox</type>
</CustomField>