force-app/main/default/objects/ParticipanteRoleta__c/fields/QuantidadeLeadsFaleConosco__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeLeadsFaleConosco__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de leads em atendimento pelo participante no canal &quot;Fale
        conosco&quot;.</description>
    <inlineHelpText>Quantidade de leads em atendimento pelo participante no canal &quot;Fale
        conosco&quot;.</inlineHelpText>
    <label>Quantidade de leads em &quot;Fale conosco&quot;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>