force-app/main/default/objects/ParticipanteRoleta__c/fields/QuantidadeLeadsLoja__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeLeadsLoja__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de leads em atendimento pelo participante no canal &quot;Loja&quot;.</description>
    <inlineHelpText>Quantidade de leads em atendimento pelo participante no canal &quot;Loja&quot;.</inlineHelpText>
    <label>Quantidade de leads em &quot;Loja&quot;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>