force-app/main/default/objects/ParticipanteRoleta__c/fields/RegistroIndisponibilidade__c.field-meta.xml
<CustomField>
    <fullName>RegistroIndisponibilidade__c</fullName>
    <description>Registra a data e hora que o status do participante foi alterado para &quot;Indisponível&apos;.</description>
    <label>Registro de indisponibilidade</label>
    <type>DateTime</type>
</CustomField>