force-app/main/default/objects/ParticipanteRoleta__c/fields/RoletaLeads__c.field-meta.xml
<CustomField>
    <fullName>RoletaLeads__c</fullName>
    <label>Roleta de leads</label>
    <referenceTo>RoletaLeads__c</referenceTo>
    <relationshipLabel>Participantes da roleta</relationshipLabel>
    <relationshipName>ParticipantesRoleta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>