force-app/main/default/objects/ParticipanteRoleta__c/fields/Saida__c.field-meta.xml
<CustomField>
    <fullName>Saida__c</fullName>
    <description>Indica o momento de saída do participante da roleta.</description>
    <label>Saída</label>
    <type>DateTime</type>
</CustomField>