force-app/main/default/objects/ParticipanteRoleta__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <description>Indica a situação do usuário no Omnichannel.</description>
    <formula>TEXT(MembroEquipe__r.Usuario__r.Situacao__c)</formula>
    <inlineHelpText>Indica a situação do usuário no Omnichannel.</inlineHelpText>
    <label>Situação</label>
    <type>Text</type>
</CustomField>