force-app/main/default/objects/ParticipanteRoleta__c/fields/Situacao_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Situacao_Anterior__c</fullName>
    <label>Situacao Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>