force-app/main/default/objects/ParticipanteRoleta__c/fields/Superintendente__c.field-meta.xml
<CustomField>
    <fullName>Superintendente__c</fullName>
    <description>Pesquisa o nome do superintendente</description>
    <formula>MembroEquipe__r.Usuario__r.Reportase__r.Reportase__r.FirstName &amp; &quot; &quot; &amp; MembroEquipe__r.Usuario__r.Reportase__r.Reportase__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superintendente</label>
    <type>Text</type>
</CustomField>