force-app/main/default/objects/ParticipanteRoleta__c/fields/TempoIndisponibilidade__c.field-meta.xml
<CustomField>
    <fullName>TempoIndisponibilidade__c</fullName>
    <description>Indica o tempo, em minutos, de indisponibilidade do corretor.</description>
    <inlineHelpText>Indica o tempo, em minutos, de indisponibilidade do corretor.</inlineHelpText>
    <label>Tempo de indisponibilidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>