force-app/main/default/objects/ParticipanteRoleta__c/fields/UsuarioCorretor__c.field-meta.xml
<CustomField>
    <fullName>UsuarioCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participantes da roleta</relationshipLabel>
    <relationshipName>Participantes_da_roleta</relationshipName>
    <type>Lookup</type>
</CustomField>