force-app/main/default/objects/ParticipanteRoleta__c/validationRules/Valida_coordenador.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_coordenador</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(PresencaValidada__c),
    $User.Id &lt;&gt; RoletaLeads__r.Coordenador__r.Id
)</errorConditionFormula>
    <errorMessage>Somente o Coordenador da RoletaLeads pode alterar a presença.</errorMessage>
</ValidationRule>