force-app/main/default/objects/ParticipanteRoleta__c/listViews/Minhas_Participacoes.listView-meta.xml
<ListView>
    <fullName>Minhas_Participacoes</fullName>
    <columns>NAME</columns>
    <columns>RoletaLeads__c</columns>
    <columns>MembroEquipe__c</columns>
    <columns>Posicao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participante_Vigente__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Minhas Participações</label>
</ListView>