force-app/main/default/objects/ParticipanteRoleta__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>RoletaLeads__c</columns>
    <columns>MembroEquipe__c</columns>
    <columns>Posicao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>